adicionado funções de delete e update de produtos

--- a/src/main/webapp/cadastro.html
+++ b/src/main/webapp/cadastro.html
@@ -45,6 +45,9 @@
 				<div>
 					<input type="button" value="Cadastrar" name="cadastrar" onclick="validar()">
 					<input type="reset" value="Limpar">
+					<a href="home">
+					<input type="button" value="Cancelar" name="cancelar">
+					</a>
 				</div>
 		</form>
 		</div>
