Edição de estilos e tratamento  da virgula no campo valor

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,7 +12,7 @@
         </div>
         <div class="container2">
             <h2>Menu</h2>
-            <form name= "fmrMenu" action="">
+            <div class= "fmrMenu">
                 <div>
                 	<a href="create">
                     <input type="button" value="Novo produto" id="novoProduto">
@@ -23,7 +23,7 @@
                     <input type="button" value="Listar produtos" id="listarProdutos">
                     </a>
                 </div>                              
-            </form>
+            </div>
         </div>
     </main>
 </body>
