Ajustes de estilo

--- a/src/main/webapp/cadastro.html
+++ b/src/main/webapp/cadastro.html
@@ -15,7 +15,7 @@
 		<div class="container4">
 			<h2>Cadastrar Produto</h2>
 			<form name="frmCadastro" action = "insert">
-				<div class="inputProduto">
+				<div class="input-geral">
 
 					<h3>Código de barras:</h3>
 					<h6 class = "asterisco">*</h6>
