--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,7 +12,8 @@
         </div>
         <div class="container2">
             <h2>Menu</h2>
-            <div class= "fmrMenu">
+            <form name= "" action="">
+            <div>
                 <div>
                 	<a href="create">
                     <input type="button" value="Novo produto" id="novoProduto">
@@ -24,6 +25,7 @@
                     </a>
                 </div>                              
             </div>
+            </form>
         </div>
     </main>
 </body>
