paginas editarPg, excluirProduto e editarProduto
Cria paginas para excluir e editar, altera a estrutura da pagina editarProduto e altera estilo

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,18 +10,28 @@
         <div>
             <h1>Home</h1>
         </div>
-        <div class="container2">
+        <div class="container">
             <h2>Menu</h2>
             <form name= "" action="">
             <div>
                 <div>
                 	<a href="create">
-                    <input type="button" value="Novo produto" id="novoProduto">
+                    <input type="button" value="Cadastrar produto" id="novoProduto">
                     </a>
                 </div>
                 <div>
                 	<a href="read">
                     <input type="button" value="Listar produtos" id="listarProdutos">
+                    </a>
+                </div>
+                <div>
+                	<a href="editarPg">
+                    <input type="button" value="Editar produto" id="editarProduto">
+                    </a>
+                </div>
+                <div>
+                	<a href="deletePg">
+                    <input type="button" value="Excluir produto" id="excluitrProduto">
                     </a>
                 </div>                              
             </div>
