--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -25,6 +25,11 @@
                     </a>
                 </div>
                 <div>
+                	<a href="selectPg">
+                    <input type="button" value="Buscar produtos" id="buscarProduto">
+                    </a>
+                </div>
+                <div>
                 	<a href="editarPg">
                     <input type="button" value="Editar produto" id="editarProduto">
                     </a>
